fixed missing comma

--- a/cscripts/__init__.py.in
+++ b/cscripts/__init__.py.in
@@ -47,7 +47,7 @@ __all__ = [
     "csroot2caldb",
     "cssens",
     "csspec",
-    "cssrcdetect"
+    "cssrcdetect",
     "cstsdist",
     "cstsmapmerge",
     "cstsmapsplit",
