--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ pyext/build/
 pyext/setup.py
 pyext/ctools/__init__.py
 pyext/ctools/tools.py
+pyext/ctools/_tools.so
 pyext/ctools/tools_wrap.cpp
 cscripts/__init__.py
 src/ctbin/ctbin
