--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -199,11 +199,13 @@ testdata = $(top_srcdir)/test/data/crab.xml \
            $(top_srcdir)/test/data/irf_file.fits.gz \
            $(top_srcdir)/test/data/workflow.xml \
            $(top_srcdir)/test/data/butterfly.txt \
+           $(top_srcdir)/test/data/butterfly.fits \
            $(top_srcdir)/test/data/pha.fits \
            $(top_srcdir)/test/data/pha_channels.fits \
            $(top_srcdir)/test/data/pull.dat \
            $(top_srcdir)/test/data/sensitivity.dat \
            $(top_srcdir)/test/data/sensitivity_integral.dat \
+           $(top_srcdir)/test/data/sensitivity.fits \
            $(top_srcdir)/test/data/skymap.fits \
            $(top_srcdir)/test/data/spectrum.fits \
            $(top_srcdir)/test/data/spectrum_castro.fits \
