--- a/pyext/ctools/__init__.py.in
+++ b/pyext/ctools/__init__.py.in
@@ -43,7 +43,7 @@ if len(bad_entries) > 0:
 del tools
 del gammalib
 del bad_entries
-del entry
+#del entry
 
 # Add version
 __version__ = '@PACKAGE_VERSION@'
