--- a/pyext/setup.py.in
+++ b/pyext/setup.py.in
@@ -1,7 +1,7 @@
 #############################################################################
 # Disutils setup file for ctools Python extension module                    #
 # ------------------------------------------------------------------------- #
-# Copyright (C) 2011-2017 Juergen Knoedlseder                               #
+# Copyright (C) 2011-2021 Juergen Knoedlseder                               #
 # ------------------------------------------------------------------------- #
 #                                                                           #
 #  This program is free software: you can redistribute it and/or modify     #
@@ -145,11 +145,13 @@ if is_build:
         os.system('cp %s %s' % ('@top_srcdir@/pyext/'+py_file,  '@top_builddir@/pyext/'+py_file))
 
     # In case that the build directory is different from the source directory
-    # then copy all cscripts and parfiles from the source directory to the
-    # build directory
+    # then copy all cscripts, comscripts and parfiles from the source directory
+    # to the build directory
     if '@top_srcdir@' != '@top_builddir@':
-        os.system('cp %s/cscripts/*.py  %s/cscripts' % ('@top_srcdir@', '@top_builddir@'))
-        os.system('cp %s/cscripts/*.par %s/cscripts' % ('@top_srcdir@', '@top_builddir@'))
+        os.system('cp %s/cscripts/*.py  %s/cscripts'                     % ('@top_srcdir@', '@top_builddir@'))
+        os.system('cp %s/cscripts/*.par %s/cscripts'                     % ('@top_srcdir@', '@top_builddir@'))
+        os.system('cp %s/modules/comscripts/*.py  %s/modules/comscripts' % ('@top_srcdir@', '@top_builddir@'))
+        os.system('cp %s/modules/comscripts/*.par %s/modules/comscripts' % ('@top_srcdir@', '@top_builddir@'))
 
 # Setup
 setup(name='@PACKAGE_NAME@',
