--- a/cscripts/__init__.py.in
+++ b/cscripts/__init__.py.in
@@ -1,7 +1,7 @@
 # ==========================================================================
 # cscripts Python module
 #
-# Copyright (C) 2015-2020 Juergen Knoedlseder
+# Copyright (C) 2015-2021 Juergen Knoedlseder
 #
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -24,6 +24,7 @@ cur_version = sys.version_info
 
 # List all scripts in this module
 __all__ = [
+    "csadd2caldb",
     "csbkgmodel",
     "cscaldb",
     "csebins",
@@ -65,6 +66,7 @@ if cur_version > req_version:
                     "csiactobs"])
 
 # Import
+from cscripts.csadd2caldb   import csadd2caldb
 from cscripts.csbkgmodel    import csbkgmodel
 from cscripts.cscaldb       import cscaldb
 from cscripts.csebins       import csebins
