--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -63,7 +63,8 @@ clean-local:
 	rm -rf $(top_builddir)/test/caldb
 	rm -rf $(top_builddir)/test/pfiles
 	rm -rf $(top_builddir)/test/prod3
-	rm -rf $(top_builddir)/test/csroot2caldb_*
+	rm -rf $(top_builddir)/test/csadd2caldb_*
+    rm -rf $(top_builddir)/test/csroot2caldb_*
 	rm -rf $(top_builddir)/test/csiactcopy_*
 	rm -rf $(top_builddir)/test/comlixfit_*
 	rm -rf $(top_builddir)/test/comobsadd_*
