Add statistics.xml file to distribution

--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -218,6 +218,7 @@ testdata = $(top_srcdir)/test/data/crab.xml \
            $(top_srcdir)/test/data/skymap.fits \
            $(top_srcdir)/test/data/spectrum.fits \
            $(top_srcdir)/test/data/spectrum_castro.fits \
+           $(top_srcdir)/test/data/statistics.xml \
            $(top_srcdir)/test/data/residual.fits \
            $(top_srcdir)/test/data/residual_onoff.fits \
            $(top_srcdir)/test/data/lightcurve.fits \
