--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # Required metadata
 sonar.projectKey=ctools
 sonar.projectName=ctools
-sonar.projectVersion=2.0.0.dev
+sonar.projectVersion=2.0.0
 
 # Description
 sonar.projectDescription="Cherenkov Telescope Array Science Analysis Software"
