--- a/src/ctools-setup.in
+++ b/src/ctools-setup.in
@@ -31,6 +31,8 @@ exec_prefix="@exec_prefix@"
 ctools_bin="@bindir@"
 ctools_lib="@libdir@"
 uname_system=`uname`
+PYTHON_PREFIX="${prefix}"
+PYTHON_EXEC_PREFIX="${exec_prefix}"
 python_dir="@pythondir@"
 python_exec_dir="@pyexecdir@"
 pkgconfig_dir="@libdir@/pkgconfig"
